update to use uniswap contracts

--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,8 @@ fs_permissions = [{ access = "read-write", path = "./"}]
 remappings = [
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
     "@solady/=lib/solady/src",
-    "@v3-periphery=lib/v3-periphery/contracts"
+    "@v3-periphery=lib/v3-periphery/contracts",
+    "@v3-core=lib/v3-core"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
